test_regress/t/t_modport_export_bad.out
%Error: t/t_modport_export_bad.v:18:8: Out-of-block definition port is not an interface port: 'clk' (IEEE 1800-2023 25.7)
   18 |   task clk.send(input logic [7:0] val);   
      |        ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_modport_export_bad.v:27:8: Interface port not found for out-of-block definition: 'nonexistent' (IEEE 1800-2023 25.7)
   27 |   task nonexistent.send(input logic [7:0] val);
      |        ^~~~~~~~~~~
%Error: t/t_modport_export_bad.v:42:8: No matching export prototype found in interface bus_if_noexport for task 'send' (IEEE 1800-2023 25.7)
   42 |   task port.send(input logic [7:0] val);
      |        ^~~~
%Error: Exiting due to
